Security policies on notes